add jwt validation
